Sugati/src/objects/Client_Payment__c.object
<CustomObject>
    <fields>
        <fullName>CP_Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Booking_Number__c</fullName>
        <formula>CP_Opportunity__r.O_Reference_Number__c</formula>
        <label>Booking Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Booking_Reference_Number__c</fullName>
        <formula>CP_Opportunity__r.O_Booking_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Card_Cheque_Doc_No__c</fullName>
        <label>Card/Cheque/Doc No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CP_Client_Group_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Group Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_Client_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Client_Invoice__c.I_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.CP_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Client_Invoice__c</referenceTo>
        <relationshipLabel>Client Payments</relationshipLabel>
        <relationshipName>Client_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Client_Name__c</fullName>
        <formula>TEXT(CP_Contact__r.Salutation)+&apos; &apos;+CP_Contact__r.FirstName  +&apos; &apos;+ CP_Contact__r.LastName</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Payments</relationshipLabel>
        <relationshipName>Client_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Credit_Card_Charge__c</fullName>
        <label>Credit Card Charge %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Credit_Card_Charges_Amount__c</fullName>
        <formula>( CP_Amount__c - CP_Receipt_AmountEx__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Charges Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>Credit_Memo__c</referenceTo>
        <relationshipLabel>Client Payments</relationshipLabel>
        <relationshipName>Client_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Currency__c</fullName>
        <formula>TEXT(CP_Opportunity__r.O_Booking_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Departure_Date__c</fullName>
        <formula>CP_Opportunity__r.O_Departure_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Expiry_Cheque_Doc_Date__c</fullName>
        <label>Expiry/Cheque/Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_First_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_HK_Leavy__c</fullName>
        <formula>(CP_Amount__c*0.15)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HK Leavy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CP_Opportunity_Owner__c</fullName>
        <formula>CP_Opportunity__r.Owner.Email</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Client Payments</relationshipLabel>
        <relationshipName>Client_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CP_Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Client_Group__c.CG_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.CP_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Client_Group__c</referenceTo>
        <relationshipLabel>Client Payments</relationshipLabel>
        <relationshipName>Client_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Payment_Method_C__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card - Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card - Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card - Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Memo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Processed_On__c</fullName>
        <label>Processed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Quote_Number__c</fullName>
        <formula>CP_Opportunity__r.O_Quote_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_ReceiptDate_To_Today__c</fullName>
        <formula>TODAY()-CP_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReceiptDate To Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Receipt_AmountEx__c</fullName>
        <label>Receipt Amount (excl Credit Charge)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Sec_Number__c</fullName>
        <label>Sec. Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Total_Selling_Price__c</fullName>
        <description>The Total Selling price at the point of client payment record.</description>
        <label>Total Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Tourism_Levy__c</fullName>
        <label>Tourism Levy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Transaction_Notes__c</fullName>
        <label>Transaction Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Type__c</fullName>
        <inlineHelpText>Payment Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SagePay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>CP_Opportunity__r.O_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_to_65th__c</fullName>
        <formula>CP_Departure_Date__c - 65</formula>
        <label>Created to 65th</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_HK_Booking__c</fullName>
        <formula>TRUE</formula>
        <label>Is HK Booking?</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Client Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>